# PoseEstimator2D

./: .gitignore  2d_sim.pro  CMakeLists.txt  CUDA_common.hpp  LICENSE  README.md  accurate_aruco.py  arucomatcher2d.cpp  arucomatcher2d.h  cAccurateMatcherGPU.cpp  cAccurateMatcherGPU.h  cArucoMatcher2d.cpp  cArucoMatcher2d.h  cContourBuilder.cpp  cContourBuilder.h  camera_param.hpp  cu_matcher.cu  cudaWrapper.cpp  cudaWrapper.h  cv_math.hpp  ehmath.hpp  iAccurateMatcher.cpp  iAccurateMatcher.h  i_ContoursMatcher.cpp  i_ContoursMatcher.h  img_func.h  main.cpp  mat_qimage.cpp  mat_qimage.hpp  qt_math.hpp  sim_2d.h  sim_2d.pro  sim_2d_types.h
